--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/facundoolano/google-play-scraper"
+    "url": "git+https://github.com/srikanthlogic/google-play-scraper.git"
   },
   "keywords": [
     "google",
@@ -24,9 +24,9 @@
   "author": "Facundo Olano",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/facundoolano/google-play-scraper/issues"
+    "url": "https://github.com/srikanthlogic/google-play-scraper/issues"
   },
-  "homepage": "https://github.com/facundoolano/google-play-scraper",
+  "homepage": "https://github.com/srikanthlogic/google-play-scraper",
   "engines": {
     "node": ">=20.0.0"
   },
